# vid-to-gif

./: .gitignore  LICENSE  README.md  publish_helper.py  pyproject.toml  requirements.txt  run_tests.py  setup.py  vid_to_gif.py
.github/workflows/: ci.yml
tests/: test_vid_to_gif.py
