[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vid-to-gif"
version = "1.0.0"
description = "A command-line tool to convert videos to high-quality GIFs"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "aousabdo", email = "aousabdo@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Integrity :: Command-Line Utilities",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.6"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
]

[project.urls]
Homepage = "https://github.com/aousabdo/vid-to-gif"
Repository = "https://github.com/aousabdo/vid-to-gif"
Issues = "https://github.com/aousabdo/vid-to-gif/issues"

[project.scripts]
vid-to-gif = "vid_to_gif:main"